[package]
name = "lune-std-fs"
version = "0.1.1"
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/lune-org/lune"
description = "Lune standard library - FS"

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
mlua = { version = "0.9.7", features = ["luau"] }
mlua-luau-scheduler = { version = "0.0.2", path = "../mlua-luau-scheduler" }

bstr = "1.9"

globset = "0.4.14"

tokio = { version = "1", default-features = false, features = [
    "fs",
    "sync",
    "rt-multi-thread",
] }

lune-utils = { version = "0.1.2", path = "../lune-utils" }
lune-std-datetime = { version = "0.1.1", path = "../lune-std-datetime" }

notify = "6.1.1"
anyhow = "1.0.86"
